# MCP-Server-Chess-Server

./: README.md  main.py  pyproject.toml
src/chess/: chess_api.py  server.py
